# pgn-downloader

./: .gitignore  .pre-commit-config.yaml  README.md  pgn_downloader.py  pyproject.toml  setup.cfg
.github/workflows/: publish-pypi.yml  typecheck.yml
pgn_downloader/: __main__.py  chess_com.py  date_parser.py  lichess.py  main.py
