[metadata]
name = pgn-downloader
author = Simske, Chessdjw
author_email = mail@simske.com, dejowa97@web.de
description = Tool to download games from a specific user on Lichess.org or chess.com
url = https://github.com/Simske/pgn-downloader
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/Simske/pgn-downloader/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 4 - Beta
    Environment :: Console
    Topic :: Games/Entertainment :: Board Games


[options]
packages = pgn_downloader
setup_requires =
    setuptools_scm
install_requires =
    requests
    tqdm
python_requires = >=3.6

[options.entry_points]
console_scripts =
    pgn-downloader = pgn_downloader.__main__:main
